--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,7 @@
-<h1>The task</h1>
-<%= @task.title %>
+<h1> <%= @task.title %></h1>
+<input type="checkbox" checked> <p class="callout">The task is done ?</p>
+
+<%= link_to 'Back to menu', tasks_path %>
+
 
 
